# buddy

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  README.bn.md  README.md  SECURITY.md  build.sh  compute_pi.py  docker-compose.yml  docker-report.md  hello.md  hello.py  improvements.md  install.sh  package-lock.json  pi.py  pi_100.py  pi_calculator.py  pi_ramanujan.py  pyproject.toml  pyrightconfig.json  run_challenges.py  start.sh
autofyn/: Dockerfile.agent  endpoints.py  entrypoint.sh  internal_endpoints.py  pyproject.toml  server.py
autofyn/agent_session/: pulse.py  runner.py  stream.py  time_lock.py  tracker.py
autofyn/core/: agent_loop.py  bootstrap.py  control.py  event_bus.py  session_runner.py  sse_dispatch.py  stream.py  subagents.py  teardown.py
autofyn/endpoints/: control.py  diff.py  helpers.py  logs.py  registry.py  run.py  test_sandbox.py
autofyn/lifecycle/: bootstrap.py  round_handlers.py  round_loop.py  teardown.py
autofyn/memory/: archiver.py  metadata.py  report.py
autofyn/operator/: control.py  inbox.py
autofyn/prompts/: git-rules.md  loader.py  orchestrator.py  subagent.py  system.md  verification-rules.md
autofyn/prompts/query/: continue.md  dispatch-rules.md  environment.md  git-rules.md  idle-nudge.md  idle_nudge.md  initial_setup.md  prior-round-context.md  stop.md  stuck-recovery.md  time-status.md  tool-timeout.md  verification-rules.md
autofyn/prompts/starter/: bug_bash.md  bug_sweep.md  code_quality.md  security_hardening.md  test_coverage.md
autofyn/prompts/subagents/: builder.md  design-reviewer.md  explorer.md  frontend-builder.md  planner.md  reviewer.md
autofyn/sandbox_client/: backend.py  base_remote.py  client.py  docker_local.py  docker_remote.py  errors.py  handle.py  instance.py  manager.py  models.py  pool.py  remote_mixin.py  slurm_backend.py
autofyn/sandbox_client/backends/: base_backend.py  docker_local_backend.py  local_backend.py  remote_backend.py
autofyn/sandbox_client/handlers/: env.py  execute.py  file_system.py  repo.py  session.py
autofyn/sandbox_manager/: client.py  pool.py  repo_diff.py  repo_init.py  repo_ops.py
autofyn/session/: runner.py  stream.py  time_lock.py  tracker.py
autofyn/skills/code-quality/: SKILL.md
autofyn/skills/env-setup/: SKILL.md
autofyn/skills/frontend-debug/: SKILL.md
autofyn/skills/git-workflow/: SKILL.md
autofyn/skills/self-improvement/: SKILL.md
autofyn/tools/: db_logger.py  session.py  subagent_tracker.py
autofyn/user/: control.py  inbox.py
autofyn/utils/: constants.py  db.py  db_helpers.py  db_logging.py  db_reconcile.py  diff.py  git.py  helpers.py  log_scrub.py  models.py  models_http.py  prompts.py  run_config.py  run_helpers.py  secrets.py  shell.py
buddy/: Dockerfile.agent  entrypoint.sh  pyproject.toml  run_manager.py  server.py
buddy/core/: agent_loop.py  bootstrap.py  event_bus.py  stream.py  teardown.py
buddy/prompts/: system.md  timed-session.md
buddy/prompts/query/: continue.md  initial.md  planner.md  reviewer.md  stop.md
buddy/prompts/subagents/: builder.md  design-reviewer.md  explorer.md  frontend-builder.md  investigator.md  plan-reviewer.md  planner.md  qa.md  reviewer.md  security-guard.md
buddy/skills/code-quality/: SKILL.md
buddy/skills/frontend-debug/: SKILL.md
buddy/skills/performance/: SKILL.md
buddy/skills/security-audit/: SKILL.md
buddy/tools/: db_logger.py  security.py  session.py
buddy/utils/: constants.py  db.py  git.py  helpers.py  models.py  prompts.py
cli/: pyproject.toml
cli/cli/: client.py  config.py  constants.py  git.py  git_utils.py  main.py  output.py
cli/cli/commands/: agent.py  config.py  doctor.py  repos.py  run.py  run_helpers.py  services.py  settings.py
cli/cli/connector/: constants.py  forward_state.py  proxy.py  server.py  ssh.py  startup.py
cli/scripts/: build.sh  start.sh  uninstall.sh  up.sh
connector/: constants.py  forward_state.py  proxy.py  pyproject.toml  server.py  ssh.py  startup.py
dashboard/backend/: app.py  auth.py  constants.py  crypto.py  diff_parser.py  endpoints.py  endpoints_settings.py  endpoints_streaming.py  endpoints_tunnel.py  models.py  pyproject.toml  sse_tokens.py  utils.py
dashboard/backend/endpoints/: network.py  parallel.py  runs.py  sandboxes.py  settings.py  streaming.py  tunnel.py
db/: Dockerfile  connection.py  constants.py  init.py  models.py  pyproject.toml
sandbox/: Dockerfile.firecracker  Dockerfile.gvisor  base.py  constants.py  entrypoint.sh  gvisor.py  manager.py  models.py  pyproject.toml  server.py
sandbox/api/: env.py  file_system.py  health.py  repo.py  session.py
sandbox/firecracker/: api.py  boot.py  executor.py
sandbox/handlers/: env.py  execute.py  file_system.py  health.py  path_validation.py  repo.py  repo_bootstrap.py  repo_env.py  repo_git.py  repo_parse.py  repo_phases.py  session.py
sandbox/repo/: parsers.py  service.py
sandbox/sdk/: errors.py  event_log.py  hooks.py  manager.py  security.py  session.py
sandbox/session/: agent_events.py  errors.py  event_log.py  gate.py  hooks.py  logging.py  manager.py  security.py  security_git.py  serialization.py  session.py  utils.py
sandbox/shared/: heartbeat.py  subprocess.py
self-improve/agent/: db.py  git_ops.py  hooks.py  main.py  permissions.py  prompt.py  pyproject.toml  session_gate.py
self-improve/monitor/: app.py  crypto.py  models.py  pyproject.toml
signalpilot/gateway/: pyproject.toml
signalpilot/gateway/gateway/: __init__.py  (+9 more)
sp-firecracker-vm/: Dockerfile  Dockerfile.gvisor  Dockerfile.rootfs  Dockerfile.sandbox  Dockerfile.test  docker-compose.yml  executor_base.py  executor_firecracker.py  executor_gvisor.py  pyproject.toml  sandbox_manager.py  signalpilot-sandbox.yml  windows-instructions.md
sp-firecracker-vm/rootfs/: sandbox_agent.py  sandbox_init.py
sp-firecracker-vm/scripts/: build-rootfs.sh  setup-linux.sh  setup-macos.sh  setup-network.sh  setup-windows.ps1
sp-firecracker-vm/test/: boot-vm.py  build-test-rootfs.sh  run-test.sh
terminal_bench_2/autofyn_agent_combined/: constants.py  pyproject.toml
(+2693 files in other folders)
