[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autofyn-agent"
version = "0.1.0"
description = "AutoFyn agent — Planner/Builder/Reviewer loop powered by Claude Agent SDK"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "httpx>=0.28.0",
    "python-dotenv",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pyright",
    "mypy",
    "ruff",
    "black",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "tools", "utils", "sandbox_manager"]
