[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalpilot-agent"
version = "0.1.0"
description = "Buddy agent — Planner/Builder/Reviewer loop powered by Claude Agent SDK"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "httpx>=0.28.0",
    "python-dotenv",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "tools", "utils"]
