[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buddy-cli"
version = "0.1.0"
description = "Buddy CLI — manage Buddy services, runs, and resources from the terminal"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
    "rich>=13.0.0",
    "InquirerPy>=0.3.4",
    "tomli-w>=1.0.0",
]

[project.scripts]
buddy = "cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pyright",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["cli"]
