[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autofyn-cli"
version = "0.1.0"
description = "AutoFyn CLI — manage AutoFyn services, runs, and resources from the terminal"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
    "rich>=13.0.0",
    "InquirerPy>=0.3.4",
    "aiohttp>=3.9",
]

[project.scripts]
autofyn = "cli.main:app"
autofyn-connector = "cli.connector.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pyright",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["cli"]
