[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autofyn-connector"
version = "0.1.0"
description = "AutoFyn Connector — bridges agent to remote sandboxes via SSH"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
]

[project.scripts]
autofyn-connector = "connector.server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
