[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buddy-db"
version = "0.1.0"
description = "Buddy shared database — SQLAlchemy ORM models and async connection pool"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
