[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autofyn-sandbox"
version = "0.1.0"
description = "AutoFyn sandbox — Firecracker (Linux) and gVisor (macOS) code execution"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
