[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autofyn-sandbox"
version = "0.1.0"
description = "AutoFyn sandbox — gVisor code execution"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "claude-agent-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pyright",
    "mypy",
    "ruff",
    "black",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
