[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalpilot-sandbox"
version = "0.1.0"
description = "SignalPilot sandbox manager — Firecracker (Linux) and gVisor (macOS) code execution"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
