[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buddy-dashboard"
version = "0.1.0"
description = "Buddy dashboard — FastAPI backend for agent run tracking and control"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "cryptography>=43.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "docker>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
