[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalpilot-agent"
version = "0.1.0"
description = "SignalPilot self-improvement agent — CEO/Worker loop powered by Claude Agent SDK"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "python-dotenv",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
