[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autofyn-terminal-bench-combined"
version = "0.1.0"
description = "AutoFyn Harbor adapter for Terminal-Bench 2.0"
requires-python = ">=3.12"
dependencies = [
    "harbor",
    "claude-agent-sdk",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["terminal_bench"]
